Fademad updates: popup styling, spacing fixes, cleaning up code

--- a/stakeholders/brazil-nut-harvester/css/style.css
+++ b/stakeholders/brazil-nut-harvester/css/style.css
@@ -133,7 +133,7 @@ button p{
   box-shadow: 2px 3px 5px #999;
   background-color:#E7EFEA;
   color: #186C3F;
-  text-align: center;
+  text-align: left;
   border-radius: 6px;
   padding: 10px 10px;
   position: absolute;
